Worked on a bit of everything.